test/bad/type_missmatch_28.mpp
while 0 do {
    print "f";
};
